<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_image_screen_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bg_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_circle" />

        <ImageView
            android:id="@+id/iv_bg_phone_screen_2"
            android:layout_width="180dp"
            android:layout_height="300dp"
            android:layout_alignBottom="@+id/iv_bg_circle"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="85dp"
            android:background="@drawable/bg_screen_2" />

        <ImageView
            android:id="@+id/iv_dress_inside_phone_screen_2"
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/iv_bg_phone_screen_2"
            android:layout_alignTop="@+id/iv_bg_circle"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/dress_inside_phone"
            android:transitionName="@string/transition_dress" />

        <com.ayush.onboarding.utils.Typewriter
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_bg_phone_screen_2"
            android:layout_below="@+id/iv_dress_inside_phone_screen_2"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="42dp"
            android:text=""
            android:textColor="@color/txt_color_dark"
            android:textSize="11sp" />

        <com.ayush.onboarding.utils.Typewriter
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_bg_phone_screen_2"
            android:layout_below="@+id/tv_description"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="22dp"
            android:text=""
            android:textColor="@color/txt_color_dark"
            android:textSize="11sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_image_screen_2"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_txt_snap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_describe"
            android:textColor="@color/txt_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_msg_screen_2_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_txt_snap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/msg_screen_2_line_1"
            android:textColor="@color/txt_color_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_msg_screen_2_line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_msg_screen_2_line_1"
            android:layout_centerHorizontal="true"
            android:text="@string/msg_screen_2_line_2"
            android:textColor="@color/txt_color_light"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>
